--- a/DarkHorse/DarkHorse.html
+++ b/DarkHorse/DarkHorse.html
@@ -395,6 +395,14 @@
 <div class="mySlides" style="text-align: center;"><img src="Darkhorse364.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Darkhorse365.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Darkhorse366.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse367.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse368.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse369.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse370.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse371.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse372.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse373.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse374.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -501,10 +509,12 @@ That same year, Frank Miller (Batman: The Dark Knight Returns) and Dave Gibbons 
 <li><a href="Darkhorse42.jpg">Aliens vs. Predator: Duel (1995)
 <li><a href="Darkhorse43.jpg">Aliens vs. Predator: War</a> (1995)
 <li><a href="Darkhorse44.jpg">Aliens vs. Predator: Xenogenesis</a> (2000)
+<li><a href="Darkhorse368.jpg">Almuric</a> (1991)
 <li><a href="../AmalasBlade/AmalasBlade.html">Amala's Blade</a> (2013)
 <li><a href="../AmazingScrewOnHead/AmazingScrewOnHead.html">Amazing Screw-On Head</a> (2002)
 <li><a href="../Amazon/Amazon.html">Amazon</a> (2009)
 <li><a href="../American/American.html">American</a> (1989)
+<li><a href="Darkhorse369.jpg">American Gods</a> (2017)
 <li><a href="../American/American.html">American: Lost in America</a> (1992)
 <li><a href="../American/American.html">American Special</a> (1990)
 <li><a href="../AmericanSplendor/AmericanSplendor.html">American Splendor</a> (1993)
@@ -523,12 +533,17 @@ That same year, Frank Miller (Batman: The Dark Knight Returns) and Dave Gibbons 
 <li><a href="../AndrewVachssUnderground/AndrewVachssUnderground.html">Andrew Vachss' Underground</a> (1994)
 <li><a href="../Angel/Angel.html">Angel</a> (2001)
 <li><a href="../Angel/Angel.html">Angel &amp; Faith</a> (2013)
+<li><a href="Darkhorse370.jpg">Angel Catbird</a> (2016)
 <li><a href="../AnimalConfidential/AnimalConfidential.html">Animal Confidential</a> (1992)
 <li><a href="../Answer/Answer.html">Answer!</a> (2013)
+<li><a href="Darkhorse371.jpg">Anthony Bourdain's Hungry Ghosts</a> (2018)
 <li><a href="../ApocalypseNerd/ApocalypseNerd.html">Apocalypse Nerd</a> (2007)
 <li><a href="../ApocalyptiGirl/ApocalyptiGirl.html">ApocalyptiGirl: An Aria for The End Times</a> (2015)
+<li><a href="Darkhorse372.jpg">Applegeeks</a> (2009)
 <li><a href="../Appleseed/appleseed.html">Appleseed Databook</a> (1994)
+<li><a href="Darkhorse373.jpg">Aquablue</a> (1989)
 <li><a href="../ArchEnemies/ArchEnemies.html">Arch Enemies</a> (2006)
+<li><a href="Darkhorse374.jpg">Archie Archives</a> (2015)
 <li><a href="../ArchieVsPredator/ArchieVsPredator.html">Archie vs. Predator</a> (2015)
 <li><a href="../EvilDead3/EvilDead3.html">Army Of Darkness</a> (1993)
 <li><a href="Darkhorse351.jpg">Atlantis: The Lost Empire</a> (2001)
