--- a/index.html
+++ b/index.html
@@ -1332,6 +1332,13 @@
 </tr>
 
 <tr>
+<td>A Long Day Of Mr. James Teacher</td>
+<td>2015</td>
+<td>Blank Slate</td>
+<td><a href="BlankSlateBooks/BlankSlateBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>A People's History Of American Empire</td>
 <td>2008</td>
 <td>Metropolitan Books</td>
@@ -1906,6 +1913,13 @@
 <td>1993</td>
 <td>Dark Horse</td>
 <td><a href="AccidentMan/accidentman.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Accidental Salad</td>
+<td>2015</td>
+<td>Blank Slate</td>
+<td><a href="BlankSlateBooks/BlankSlateBooks.html">Details</a></td>
 </tr>
 
 <tr>
@@ -3627,6 +3641,13 @@
 <td>1949</td>
 <td>Fox Comics</td>
 <td><a href="FoxPublications/FoxPublications.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Alby Figgs</td>
+<td>2020</td>
+<td>Blank Slate</td>
+<td><a href="BlankSlateBooks/BlankSlateBooks.html">Details</a></td>
 </tr>
 
 <tr>
@@ -9406,6 +9427,13 @@
 </tr>
 
 <tr>
+<td>Band</td>
+<td>2011</td>
+<td>Blank Slate</td>
+<td><a href="BlankSlateBooks/BlankSlateBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Bandette</td>
 <td>2013</td>
 <td>Monkeybrain</td>
@@ -10532,6 +10560,13 @@
 </tr>
 
 <tr>
+<td>Beetroot</td>
+<td>2015</td>
+<td>Blank Slate</td>
+<td><a href="BlankSlateBooks/BlankSlateBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Before The Fantastic 4: Grimm And Logan</td>
 <td>2000</td>
 <td>Marvel</td>
@@ -10725,6 +10760,13 @@
 <td>1998</td>
 <td>Drawn &amp; Quarterly</td>
 <td><a href="DrawnQuarterly/DrawnQuarterly.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Berlin And That</td>
+<td>2015</td>
+<td>Blank Slate</td>
+<td><a href="BlankSlateBooks/BlankSlateBooks.html">Details</a></td>
 </tr>
 
 <tr>
@@ -12693,6 +12735,13 @@
 <td>1992</td>
 <td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Blank Slate Books</td>
+<td>2015</td>
+<td>Publisher</td>
+<td><a href="BlankSlateBooks/BlankSlateBooks.html">Details</a></td>
 </tr>
 
 <tr>
@@ -22365,7 +22414,7 @@
 </tr>
 
 <tr>
-<td>Dark Horse</td>
+<td>Dark Horse Comics Group</td>
 <td>1986</td>
 <td>Publisher</td>
 <td><a href="DarkHorse/DarkHorse.html">Details</a></td>
@@ -23519,6 +23568,13 @@
 </tr>
 
 <tr>
+<td>Death And The Girls</td>
+<td>2015</td>
+<td>Blank Slate</td>
+<td><a href="BlankSlateBooks/BlankSlateBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Death Be Damned</td>
 <td>2017</td>
 <td>Boom!</td>
@@ -24261,6 +24317,13 @@
 </tr>
 
 <tr>
+<td>Departures</td>
+<td>2018</td>
+<td>Blank Slate</td>
+<td><a href="BlankSlateBooks/BlankSlateBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Dept H</td>
 <td>2016</td>
 <td>Dark Horse</td>
@@ -24887,6 +24950,13 @@
 <td>1993</td>
 <td>Mirage</td>
 <td><a href="MirageStudios/MirageStudios.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dinopopolous</td>
+<td>2019</td>
+<td>Blank Slate</td>
+<td><a href="BlankSlateBooks/BlankSlateBooks.html">Details</a></td>
 </tr>
 
 <tr>
@@ -30851,6 +30921,13 @@
 </tr>
 
 <tr>
+<td>Felt Mistress: Creature Coulture</td>
+<td>2015</td>
+<td>Blank Slate</td>
+<td><a href="BlankSlateBooks/BlankSlateBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Felt: True Tales Of Underground Hip Hop</td>
 <td>2001</td>
 <td>Image</td>
@@ -35071,6 +35148,13 @@
 </tr>
 
 <tr>
+<td>Girl And The Gorilla</td>
+<td>2010</td>
+<td>Blank Slate</td>
+<td><a href="BlankSlateBooks/BlankSlateBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Girl Comics</td>
 <td>1949</td>
 <td>Marvel</td>
@@ -38339,6 +38423,13 @@
 </tr>
 
 <tr>
+<td>Hector Umbra</td>
+<td>2015</td>
+<td>Blank Slate</td>
+<td><a href="BlankSlateBooks/BlankSlateBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Hedge Knight</td>
 <td>2004</td>
 <td>Devil's Due</td>
@@ -39396,6 +39487,13 @@
 </tr>
 
 <tr>
+<td>Home And Away</td>
+<td>2015</td>
+<td>Blank Slate</td>
+<td><a href="BlankSlateBooks/BlankSlateBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Home Grown Funnies</td>
 <td>1971</td>
 <td>Kitchen Sink</td>
@@ -40100,6 +40198,13 @@
 <td>1993</td>
 <td>Tundra</td>
 <td><a href="TundraUK/TundraUK.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Hugo Tate</td>
+<td>2015</td>
+<td>Blank Slate</td>
+<td><a href="BlankSlateBooks/BlankSlateBooks.html">Details</a></td>
 </tr>
 
 <tr>
@@ -45555,6 +45660,13 @@
 </tr>
 
 <tr>
+<td>Kochi Wanaba</td>
+<td>2015</td>
+<td>Blank Slate</td>
+<td><a href="BlankSlateBooks/BlankSlateBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Kodansha</td>
 <td>1909</td>
 <td>Publisher</td>
@@ -47396,6 +47508,13 @@
 </tr>
 
 <tr>
+<td>Listening Agent</td>
+<td>2015</td>
+<td>Blank Slate</td>
+<td><a href="BlankSlateBooks/BlankSlateBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Literals</td>
 <td>2009</td>
 <td>Vertigo</td>
@@ -48439,6 +48558,13 @@
 </tr>
 
 <tr>
+<td>Love Looks Away</td>
+<td>2011</td>
+<td>Blank Slate</td>
+<td><a href="BlankSlateBooks/BlankSlateBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Love Me Tenerloin: A Cal McDonald Mystery</td>
 <td>2004</td>
 <td>Dark Horse</td>
@@ -48583,6 +48709,13 @@
 <td>2007</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Luchadoras</td>
+<td>2015</td>
+<td>Blank Slate</td>
+<td><a href="BlankSlateBooks/BlankSlateBooks.html">Details</a></td>
 </tr>
 
 <tr>
@@ -54163,6 +54296,13 @@
 </tr>
 
 <tr>
+<td>My Skateboard Life</td>
+<td>2015</td>
+<td>Blank Slate</td>
+<td><a href="BlankSlateBooks/BlankSlateBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>My Story True Romances In Pictures</td>
 <td>1949</td>
 <td>Fox Comics</td>
@@ -54852,6 +54992,13 @@
 <td>1945</td>
 <td>Marvel</td>
 <td><a href="NellieTheNurse/NellieTheNurse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Nelson</td>
+<td>2015</td>
+<td>Blank Slate</td>
+<td><a href="BlankSlateBooks/BlankSlateBooks.html">Details</a></td>
 </tr>
 
 <tr>
@@ -58242,6 +58389,13 @@
 </tr>
 
 <tr>
+<td>Peepholes</td>
+<td>2015</td>
+<td>Blank Slate</td>
+<td><a href="BlankSlateBooks/BlankSlateBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Peepshow</td>
 <td>1992</td>
 <td>Drawn &amp; Quarterly</td>
@@ -58700,6 +58854,13 @@
 <td>2005</td>
 <td>Knockabout</td>
 <td><a href="Knockabout/Knockabout.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Pimo And Rex</td>
+<td>2013</td>
+<td>Blank Slate</td>
+<td><a href="BlankSlateBooks/BlankSlateBooks.html">Details</a></td>
 </tr>
 
 <tr>
@@ -59245,6 +59406,13 @@
 <td>1954</td>
 <td>Amalgamated</td>
 <td><a href="AmalgamatedPress/AmalgamatedPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Playing Out</td>
+<td>2015</td>
+<td>Blank Slate</td>
+<td><a href="BlankSlateBooks/BlankSlateBooks.html">Details</a></td>
 </tr>
 
 <tr>
@@ -60394,6 +60562,13 @@
 </tr>
 
 <tr>
+<td>Proper Go Well High</td>
+<td>2015</td>
+<td>Blank Slate</td>
+<td><a href="BlankSlateBooks/BlankSlateBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Property</td>
 <td>2013</td>
 <td>Drawn &amp; Quarterly</td>
@@ -60531,6 +60706,13 @@
 <td>2019</td>
 <td>Valiant</td>
 <td><a href="ValiantComics/ValiantComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Psychiatric Tales</td>
+<td>2015</td>
+<td>Blank Slate</td>
+<td><a href="BlankSlateBooks/BlankSlateBooks.html">Details</a></td>
 </tr>
 
 <tr>
@@ -66991,6 +67173,13 @@
 </tr>
 
 <tr>
+<td>Silver Darlings</td>
+<td>2015</td>
+<td>Blank Slate</td>
+<td><a href="BlankSlateBooks/BlankSlateBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Silver Sable</td>
 <td>1992</td>
 <td>Marvel</td>
@@ -67694,6 +67883,13 @@
 <td>2015</td>
 <td>Boom!</td>
 <td><a href="Boom!/Boom!.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Sleepyheads</td>
+<td>2015</td>
+<td>Blank Slate</td>
+<td><a href="BlankSlateBooks/BlankSlateBooks.html">Details</a></td>
 </tr>
 
 <tr>
@@ -68628,6 +68824,13 @@
 </tr>
 
 <tr>
+<td>Sparky O'hare</td>
+<td>2015</td>
+<td>Blank Slate</td>
+<td><a href="BlankSlateBooks/BlankSlateBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Sparky Watts</td>
 <td>1942</td>
 <td>Columbia</td>
@@ -69006,6 +69209,13 @@
 </tr>
 
 <tr>
+<td>Spleenal</td>
+<td>2009</td>
+<td>Blank Slate</td>
+<td><a href="BlankSlateBooks/BlankSlateBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Spongebob Comics</td>
 <td>2017</td>
 <td>Abrams</td>
@@ -69241,6 +69451,13 @@
 <td>2017</td>
 <td>451 Media</a>
 <td><a href="451Media/451Media.html">Details</a>
+</tr>
+
+<tr>
+<td>Stalin's Spy In Tokyo</td>
+<td>2012</td>
+<td>Blank Slate</td>
+<td><a href="BlankSlateBooks/BlankSlateBooks.html">Details</a></td>
 </tr>
 
 <tr>
@@ -70889,6 +71106,13 @@
 </tr>
 
 <tr>
+<td>Suitcase</td>
+<td>2012</td>
+<td>Blank Slate</td>
+<td><a href="BlankSlateBooks/BlankSlateBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Sukeban Turbo</td>
 <td>2018</td>
 <td>IDW</td>
@@ -71351,6 +71575,13 @@
 </tr>
 
 <tr>
+<td>Swear Down</td>
+<td>2015</td>
+<td>Blank Slate</td>
+<td><a href="BlankSlateBooks/BlankSlateBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Sweet Love</td>
 <td>1949</td>
 <td>Harvey</td>
@@ -71650,6 +71881,13 @@
 <td>2008</td>
 <td>Dabel Brothers</td>
 <td><a href="DabelBrothersProductions/DabelBrothersProductions.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Take Away!</td>
+<td>2015</td>
+<td>Blank Slate</td>
+<td><a href="BlankSlateBooks/BlankSlateBooks.html">Details</a></td>
 </tr>
 
 <tr>
@@ -73892,6 +74130,13 @@
 </tr>
 
 <tr>
+<td>Trains Are... Mint</td>
+<td>2008</td>
+<td>Blank Slate</td>
+<td><a href="BlankSlateBooks/BlankSlateBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Trancers</td>
 <td>1991</td>
 <td>Eternity</td>
@@ -74950,6 +75195,13 @@
 <td>2013</td>
 <td>Dynamite</td>
 <td><a href="Dynamite/Dynamite.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Uncle Bob Adventures</td>
+<td>2015</td>
+<td>Blank Slate</td>
+<td><a href="BlankSlateBooks/BlankSlateBooks.html">Details</a></td>
 </tr>
 
 <tr>
@@ -77779,6 +78031,13 @@
 </tr>
 
 <tr>
+<td>We Can Still Be Friends</td>
+<td>2015</td>
+<td>Blank Slate</td>
+<td><a href="BlankSlateBooks/BlankSlateBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>We Stand On Guard</td>
 <td>2015</td>
 <td>Image</td>
@@ -77804,6 +78063,13 @@
 <td>2004</td>
 <td>Vertigo</td>
 <td><a href="Vertigo/Vertigo.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Weak As I Am</td>
+<td>2015</td>
+<td>Blank Slate</td>
+<td><a href="BlankSlateBooks/BlankSlateBooks.html">Details</a></td>
 </tr>
 
 <tr>
