--- a/ACComics/ACComics.html
+++ b/ACComics/ACComics.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<h1>AC Comics</h1>
+<img src="ACComics5.jpg">
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
