--- a/RichardCorben/RichardCorben.html
+++ b/RichardCorben/RichardCorben.html
@@ -149,7 +149,7 @@
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-Richard Corben (born October 1, 1940) is an American illustrator and comic book artist best known for:
+<a href="../FantagorPress/FantagorPress.html">Fantagor Press</a> is the label of Richard Corben (October 1, 1940) an American illustrator and comic book artist best known for:
 <li> <a href="../Den/Den.html">Den</a> which featured in <a href="../HeavyMetal/HeavyMetal.html">Heavy Metal</a> the movie and magazine. 
 <li><a href="../VicAndBlood/VicAndBlood.html">Vic and Blood</a>
 <li><a href="../1984/1984.html">1984</a>
