--- a/index.html
+++ b/index.html
@@ -13598,6 +13598,13 @@
 </tr>
 
 <tr>
+<td>Bodyssey</td>
+<td>1993</td>
+<td>Fantagor</td>
+<td><a href="FantagorPress/FantagorPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Bogeyman</td>
 <td>1969</td>
 <td>SFCC</td>
@@ -17983,6 +17990,13 @@
 <td>1991</td>
 <td>Innovation</td>
 <td><a href="Innovation/Innovation.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Children Of Fire</td>
+<td>1987</td>
+<td>Fantagor</td>
+<td><a href="FantagorPress/FantagorPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -24270,8 +24284,22 @@
 <tr>
 <td>Den</td>
 <td>1978</td>
-<td>Richard Corben</td>
+<td>Fantagor</td>
 <td><a href="Den/Den.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Den 1: Neverwhere</td>
+<td>1991</td>
+<td>Fantagor</td>
+<td><a href="FantagorPress/FantagorPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Den Saga</td>
+<td>1992</td>
+<td>Fantagor</td>
+<td><a href="FantagorPress/FantagorPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -30264,6 +30292,20 @@
 </tr>
 
 <tr>
+<td>Fantagor Presents Brood</td>
+<td>1983</td>
+<td>Fantagor</td>
+<td><a href="FantagorPress/FantagorPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Fantagor Press</td>
+<td>1970</td>
+<td>Publisher</td>
+<td><a href="FantagorPress/FantagorPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Fantagraphics Books</td>
 <td>1976</td>
 <td>Publisher</td>
@@ -33143,6 +33185,13 @@
 <td>1863</td>
 <td>Jules Vern</td>
 <td><a href="FromTheEarthToTheMoon/FromTheEarthToTheMoon.html">Details</a></td>
+</tr>
+
+<tr>
+<td>From The Pit</td>
+<td>1994</td>
+<td>Fantagor</td>
+<td><a href="FantagorPress/FantagorPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -39697,6 +39746,13 @@
 </tr>
 
 <tr>
+<td>Horror In The Dark</td>
+<td>1991</td>
+<td>Fantagor</td>
+<td><a href="FantagorPress/FantagorPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Horror Of Collier County</td>
 <td>1999</td>
 <td>Dark Horse</td>
@@ -42392,6 +42448,13 @@
 </tr>
 
 <tr>
+<td>Jaxon's Illustrated Tales</td>
+<td>1984</td>
+<td>Fantagor</td>
+<td><a href="FantagorPress/FantagorPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Jay And Silent Bob</td>
 <td>1998</td>
 <td>Oni</td>
@@ -42543,6 +42606,13 @@
 <td>2006</td>
 <td>Boom!</td>
 <td><a href="Boom!/Boom!.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Jeremy Brood</td>
+<td>1982</td>
+<td>Fantagor</td>
+<td><a href="FantagorPress/FantagorPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -53939,6 +54009,13 @@
 </tr>
 
 <tr>
+<td>Mutant World</td>
+<td>1983</td>
+<td>Fantagor</td>
+<td><a href="FantagorPress/FantagorPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Mutant X</td>
 <td>1998</td>
 <td>Marvel</td>
@@ -62722,6 +62799,7 @@
 <td>IDW</td>
 <td><a href="IDW/IDW.html">Details</a></td>
 </tr>
+
 <tr>
 <td>Richard Corben</td>
 <td>1970</td>
@@ -62986,6 +63064,13 @@
 <td>1991</td>
 <td>Eternity</td>
 <td><a href="EternityComics/EternityComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Rip In Time</td>
+<td>1986</td>
+<td>Fantagor</td>
+<td><a href="FantagorPress/FantagorPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -68390,6 +68475,13 @@
 </tr>
 
 <tr>
+<td>Son Of Mutant World</td>
+<td>1990</td>
+<td>Fantagor</td>
+<td><a href="FantagorPress/FantagorPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Son Of Satan</td>
 <td>1975</td>
 <td>Marvel</td>
@@ -72126,6 +72218,13 @@
 <td>1985</td>
 <td>Beanworld Press</td>
 <td><a href="Beanworld/Beanworld.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Tales Of The Black Diamond</td>
+<td>1993</td>
+<td>Fantagor</td>
+<td><a href="FantagorPress/FantagorPress.html">Details</a></td>
 </tr>
 
 <tr>
