--- a/DarkHorse/DarkHorse.html
+++ b/DarkHorse/DarkHorse.html
@@ -76,6 +76,7 @@
 <div class="mySlides" style="text-align: center;"><img src="Darkhorse44.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Darkhorse45.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Darkhorse46.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../BasilWolverton/BasilWolverton15.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Darkhorse47.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Darkhorse48.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Darkhorse49.jpg"></div>
@@ -403,6 +404,16 @@
 <div class="mySlides" style="text-align: center;"><img src="Darkhorse372.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Darkhorse373.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Darkhorse374.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse375.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse376.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse377.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse378.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse379.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse380.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse381.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse382.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse383.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse384.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -463,7 +474,8 @@ That same year, Frank Miller (Batman: The Dark Knight Returns) and Dave Gibbons 
 <li><a href="../Alabaster/alabaster.html">Alabaster: The Good, The Bad, and The Bird</a>    (2015)
 <li><a href="../Alabaster/alabaster.html">Alabaster: Wolves</a>    (2012)
 <li><a href="../AleisterAndAdolf/AleisterAndAdolf.html">Aleister &amp; Adolf</a> (2016)
-<li><a href="../AliceInSunderland/AliceInSunderland.html">Alice in Sunderland: An Entertainment</a> (2007)
+<li><a href="Darkhorse367.jpg">Alena</a> (2016)
+<li><a href="../AliceInSunderland/AliceInSunderland.html">Alice in Sunderland</a> (2007)
 <li><a href="../Alien3/Alien3.html">Alien3</a> (1992)
 <li><a href="Darkhorse4.jpg">Alien Resurrection</a> (1997)
 <li><a href="Darkhorse5.jpg">Alien vs. Predator: Civilized Beasts</a> (2008)
@@ -515,7 +527,6 @@ That same year, Frank Miller (Batman: The Dark Knight Returns) and Dave Gibbons 
 <li><a href="../Amazon/Amazon.html">Amazon</a> (2009)
 <li><a href="../American/American.html">American</a> (1989)
 <li><a href="Darkhorse369.jpg">American Gods</a> (2017)
-<li><a href="../American/American.html">American: Lost in America</a> (1992)
 <li><a href="../American/American.html">American Special</a> (1990)
 <li><a href="../AmericanSplendor/AmericanSplendor.html">American Splendor</a> (1993)
 <li><a href="../AmericanSplendor/AmericanSplendor.html">American Splendor: Bedtime Stories</a> (2000)
@@ -529,6 +540,7 @@ That same year, Frank Miller (Batman: The Dark Knight Returns) and Dave Gibbons 
 <li><a href="../AmericanSplendor/AmericanSplendor.html">American Splendor: Transatlantic Comics</a> (1998)
 <li><a href="../AmericanSplendor/AmericanSplendor.html">American Splendor: Unsung Hero</a> (2002)
 <li><a href="../AmericanSplendor/AmericanSplendor.html">American Splendor: Windfall</a> (1995)
+<li><a href="../American/American.html">American: Lost in America</a> (1992)
 <li><a href="../AncientJoe/AncientJoe.html">Ancient Joe</a> (2001)
 <li><a href="../AndrewVachssUnderground/AndrewVachssUnderground.html">Andrew Vachss' Underground</a> (1994)
 <li><a href="../Angel/Angel.html">Angel</a> (2001)
@@ -557,23 +569,39 @@ That same year, Frank Miller (Batman: The Dark Knight Returns) and Dave Gibbons 
 <li><a href="../Badger/Badger.html">Badger: Shattered Mirror</a> (1994)
 <li><a href="../Badlands/Badlands.html">Badlands</a> (1991)
 <li><a href="../BakersMeetJingleBelle/BakersMeetJingleBelle.html">Bakers Meet Jingle Belle</a> (2006)
-<li><a href="../BarbWire/BarbWire.html">Barb Wire</a> (1995)
+<li><a href="Darkhorse376.jpg">Baltimore</a> (2007)
+<li><a href="Darkhorse375.jpg">Baltimore Omnibus</a> (2019)
+<li><a href="../Bandette/Bandette.html">Bandette</a> (2013)
+<li><a href="Darkhorse378.jpg">Bang!</a> (2020)
+<li><a href="Darkhorse379.jpg">Bankshot</a> (2017)
+<li><a href="Darkhorse380.jpg">Banya: The Explosive Delivery Man</a> (2006)
+<li><a href="../BarbWire/BarbWire.html">Barb Wire</a> (1994)
 <li><a href="../BarryWinsorSmithStoryteller/BarryWinsorSmithStoryteller.html">Barry Windsor-Smith: STORYTELLER</a> (1997)
+<li><a href="../BasilWolverton/BasilWolverton15.jpg">Basil Wolverton's Fantastic Fables</a> (1993)
 <li><a href="../BasilWolvertionsGatewayToHorror/BasilWolvertionsGatewayToHorror.html">Basil Wolverton's Gateway to Horror</a> (1988)
 <li><a href="Darkhorse47.jpg">Basil Wolverton's Planet Of Terror</a> (1987)
+<li><a href="../BatmanVsPredator/BatmanVsPredator.html">Batman Versus Predator</a> (1991)
+<li><a href="../BatmanVsPredatorII/BatmanVsPredatorII.html">Batman Versus Predator II</a> (1992)
+<li><a href="../BatmanVsPredatorIII/BatmanVsPredatorIII.html">Batman Versus Predator III</a> (1997)
 <li><a href="../BatmanAliens/BatmanAliens.html">Batman/Aliens</a> (1997)
 <li><a href="../BatmanAliensII/BatmanAliensII.html">Batman/Aliens II</a> (2003)
 <li><a href="../BatmanGrendel/BatmanGrendel.html">Batman/Grendel</a> (1996)
 <li><a href="../BatmanHellboyStarman/BatmanHellboyStarman.html">Batman/Hellboy/Starman</a> (1999)
 <li><a href="../BatmanTarzan/BatmanTarzan.html">Batman/Tarzan: Claws Of The Cat-Woman</a> (1999)
 <li><a href="Darkhorse48.jpg">Battle Gods: Warriors Of The Chaak</a> (2000)
+<li><a href="Darkhorse381.jpg">Battlepub</a> (2012)
+<li><a href="Darkhorse382.jpg">Beanworld Omnibus</a> (2018)
 <li><a href="../BeastsOfBurden/BeastsOfBurden.html">Beasts Of Burden</a> (2009)
+<li><a href="Darkhorse383.jpg">Bedtime Games</a> (2018)
 <li><a href="../BerniWrightsonFrankenstein/BerniWrightsonFrankenstein.html">Bernie Wrightson's Frankenstein</a> (1994)
+<li><a href="Darkhorse384.jpg">Berserker Unbound</a> (2019)
+<li><a href="Darkhorse385.jpg">Best Wishes</a> (2017)
 <li><a href="Darkhorse49.jpg">Bettie Page Comics</a> (1996)
 <li><a href="Darkhorse50.jpg">Bettie Page Comics: Spicy Adventure</a> (1997)
 <li><a href="Darkhorse51.jpg">Bettie Page: Queen Of The Nile</a> (2000)
 <li><a href="Darkhorse52.jpg">Big</a> (1989)
 <li><a href="Darkhorse53.jpg">Big Blown Baby</a> (1996)
+<li><a href="Darkhorse386.jpg">Big Damn Hard Boiled</a> (1997)
 <li><a href="../BigGuyRustyRobot/BigGuyRustyRobot.html">Big Guy and Rusty The Boy Robot</a> (1995)
 <li><a href="../Billi99/Billi99.html">Billi 99</a> (1991)
 <li><a href="../BillyKidOldTimey/BillyKidOldTimey.html">Billy The Kid's Old Timey Oddities</a> (2005)
@@ -750,6 +778,7 @@ That same year, Frank Miller (Batman: The Dark Knight Returns) and Dave Gibbons 
 <li><a href="Darkhorse173.jpg">James Bond 007: A Silent Armageddon</a> (1993)
 <li><a href="Darkhorse174.jpg">James Bond 007: Serpent's Tooth</a> (1993)
 <li><a href="../JingleBelle/JingleBelle.html">Jingle Belle</a> (2005)
+<li><a href="../DarkHorse/Darkhorse377.jpg">Joe Golem</a> (2015)
 <li><a href="../JohnByrnes2112/JohnByrnes2112.html">John Byrne's 2112</a> (1991)
 <li><a href="../JohnByrnesNextMen/JohnByrnesNextMen.html">John Byrne's Next Men</a> (1994)
 <li><a href="../JudgeDreddAliens/JudgeDreddAliens.html">Judge Dredd vs. Aliens</a> (2003)
