--- a/Image/image.html
+++ b/Image/image.html
@@ -703,7 +703,7 @@ Titles
 <li><a href="image109.jpg">Battle of the Planets</a> (2002)
 <li><a href="image110.jpg">Battle of the Planets Thundercats</a> (2003)
 <li><a href="image111.jpg">Battle Pope</a> (2005)
-<li><a href="image112.jpg">Battle Pug</a> (2019)
+<li><a href="image112.jpg">Battlepug</a> (2019)
 <li><a href="image113.jpg">Battlestar Galactica</a> (1995)
 <li><a href="image114.jpg">Battlestone</a> (1994)
 <li><a href="image115.jpg">Beast</a> (2009)
