--- a/index.html
+++ b/index.html
@@ -79,6 +79,13 @@
 </tr>
 
 <tr>
+<td>2 Sisters: A Super-Spy Graphic Novel</td>
+<td>2015</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>3</td>
 <td>2010</td>
 <td>Arcana</td>
@@ -135,7 +142,7 @@
 </tr>
 
 <tr>
-<td>3 Story Secret History </td>
+<td>3 Story: The Secret History Of The Giant Man </td>
 <td>2009</td>
 <td>Dark Horse</td>
 <td><a href="3StorySecretHistory/3StorySecretHistory.html">Details</a></td>
@@ -1764,7 +1771,7 @@
 <tr>
 <td>Abraham Stone</td>
 <td>2020</td>
-<td>DarkHorse</td>
+<td>Dark Horse</td>
 <td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
 
@@ -3378,6 +3385,13 @@
 </tr>
 
 <tr>
+<td>Akira</td>
+<td>2006</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Al Avison</td>
 <td>1920</td>
 <td>Creator</td>
@@ -4759,6 +4773,13 @@
 </tr>
 
 <tr>
+<td>Almuric</td>
+<td>1991</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Aloha, Hawaiian Dick</td>
 <td>2016</td>
 <td>Image</td>
@@ -5886,6 +5907,13 @@
 </tr>
 
 <tr>
+<td>Angel Catbird</td>
+<td>2016</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Angel City</td>
 <td>2016</td>
 <td>Oni</td>
@@ -6320,6 +6348,13 @@
 </tr>
 
 <tr>
+<td>Anthony Bourdain's Hungry Ghosts</td>
+<td>2018</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Antz</td>
 <td>1998</td>
 <td>Dreamworks</td>
@@ -6586,6 +6621,13 @@
 </tr>
 
 <tr>
+<td>Applegeeks</td>
+<td>2009</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Appleseed</td>
 <td>1988</td>
 <td>Eclipse</td>
@@ -6618,6 +6660,13 @@
 <td>2008</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Aquablue</td>
+<td>1989</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -6814,6 +6863,13 @@
 <td>2013</td>
 <td>Archie</td>
 <td><a href="ArchieComics/ArchieComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Archie Archives</td>
+<td>2015</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -7100,6 +7156,13 @@
 <td>1992</td>
 <td>Universal</td>
 <td><a href="EvilDead3/EvilDead3.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Army Of Darkness</td>
+<td>1993</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -7952,7 +8015,7 @@
 <tr>
 <td>Atlantis: The Lost Empire</td>
 <td>2001</td>
-<td>DarkHorse</td>
+<td>Dark Horse</td>
 <td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
 
@@ -9413,6 +9476,20 @@
 </tr>
 
 <tr>
+<td>Baltimore</td>
+<td>2007</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Baltimore Omnibus</td>
+<td>2019</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Bamm-Bamm And Pebbles Flintstone</td>
 <td>1964</td>
 <td>Gold Key</td>
@@ -9431,6 +9508,13 @@
 <td>2011</td>
 <td>Blank Slate</td>
 <td><a href="BlankSlateBooks/BlankSlateBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Bandette</td>
+<td>2013</td>
+<td>Dark Horse</td>
+<td><a href="Bandette/Bandette.html">Details</a></td>
 </tr>
 
 <tr>
@@ -9911,7 +9995,7 @@
 <tr>
 <td>Batman versus Predator II</td>
 <td>1992</td>
-<td>DC</td>
+<td>Dark Horse</td>
 <td><a href="BatmanVsPredatorII/BatmanVsPredatorII.html">Details</a></td>
 </tr>
 
@@ -10126,6 +10210,20 @@
 </tr>
 
 <tr>
+<td>Battlepug</td>
+<td>2012</td>
+<td>Dark Horse</td> 
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Battlepug</td>
+<td>2019</td>
+<td>Image</td> 
+<td><a href="Image/Image.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Battlestar Galactica</td>
 <td>1978</td>
 <td>Universal</td>
@@ -10221,6 +10319,13 @@
 <td>1938</td>
 <td>DC Thomson</td>
 <td><a href="Beano/Beano.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Beanworld Omnibus</td>
+<td>2018</td>
+<td>Dark Horse</td> 
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -10403,6 +10508,13 @@
 <td>2012</td>
 <td>Image</td>
 <td><a href="Bedlam/Bedlam.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Bedtime Games</td>
+<td>2018</td>
+<td>Dark Horse</td> 
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -19274,7 +19386,7 @@
 <tr>
 <td>Colonel Weird: Cosmagog</td>
 <td>2020</td>
-<td>DarkHorse</td>
+<td>Dark Horse</td>
 <td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
 
@@ -29729,6 +29841,13 @@
 <td>2001</td>
 <td>Dark Horse</td>
 <td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Fab</td>
+<td>2021</td>
+<td>Storyworlds</td>
+<td><a href="StoryWorlds/StoryWorlds.html">Details</a></td>
 </tr>
 
 <tr>
@@ -43099,6 +43218,13 @@
 </tr>
 
 <tr>
+<td>Joe Golem</td>
+<td>2019</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Joe Jusko</td>
 <td>1959</td>
 <td>Creator</td>
@@ -45865,7 +45991,7 @@
 <tr>
 <td>Koshchei The Deathless</td>
 <td>2018</td>
-<td>DarkHorse</td>
+<td>Dark Horse</td>
 <td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
 
@@ -57227,6 +57353,13 @@
 </tr>
 
 <tr>
+<td>Only Hope: Fear Farm</td>
+<td>2021</td>
+<td>Storyworlds</td>
+<td><a href="StoryWorlds/StoryWorlds.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Only Skin</td>
 <td>2008</td>
 <td>Secret Acres</td>
@@ -61579,7 +61712,7 @@
 <tr>
 <td>Rasputin: The Voice Of The Dragon</td>
 <td>2018</td>
-<td>DarkHorse</td>
+<td>Dark Horse</td>
 <td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
 
@@ -70428,6 +70561,13 @@
 </tr>
 
 <tr>
+<td>Storyworlds</td>
+<td>2020</td>
+<td>Publisher</td>
+<td><a href="StoryWorlds/StoryWorlds.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Storm</td>
 <td>1996</td>
 <td>Marvel</td>
@@ -71741,6 +71881,13 @@
 <td>2007</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Sword And The Six-Shooter</td>
+<td>2021</td>
+<td>Storyworlds</td>
+<td><a href="StoryWorlds/StoryWorlds.html">Details</a></td>
 </tr>
 
 <tr>
@@ -75707,6 +75854,13 @@
 <td>2008</td>
 <td>Devil's Due</td>
 <td><a href="DevilsDue/DevilsDue.html">Details</a></td>
+</tr>
+
+<tr>
+<td>United States Of Magic</td>
+<td>2021</td>
+<td>Storyworlds</td>
+<td><a href="StoryWorlds/StoryWorlds.html">Details</a></td>
 </tr>
 
 <tr>
