--- a/BasilWolverton/BasilWolverton.html
+++ b/BasilWolverton/BasilWolverton.html
@@ -36,6 +36,9 @@
 <div class="mySlides" style="text-align: center;"><img src="BasilWolverton15.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="BasilWolverton16.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="BasilWolverton17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../DarkHorse/Darkhorse47.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../PowerhousePepper/PowerhousePepper1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BasilWolverton.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
