--- a/DarkHorse/DarkHorse.html
+++ b/DarkHorse/DarkHorse.html
@@ -414,6 +414,27 @@
 <div class="mySlides" style="text-align: center;"><img src="Darkhorse382.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Darkhorse383.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Darkhorse384.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse385.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse386.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse387.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse388.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse389.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse390.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse391.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse392.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse393.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse394.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse395.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse396.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse397.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse398.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse399.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse400.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse401.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse402.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse403.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse404.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse405.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -603,8 +624,10 @@ That same year, Frank Miller (Batman: The Dark Knight Returns) and Dave Gibbons 
 <li><a href="Darkhorse53.jpg">Big Blown Baby</a> (1996)
 <li><a href="Darkhorse386.jpg">Big Damn Hard Boiled</a> (1997)
 <li><a href="../BigGuyRustyRobot/BigGuyRustyRobot.html">Big Guy and Rusty The Boy Robot</a> (1995)
+<li><a href="Darkhorse387.jpg">Big Hoax</a> (2001)
 <li><a href="../Billi99/Billi99.html">Billi 99</a> (1991)
 <li><a href="../BillyKidOldTimey/BillyKidOldTimey.html">Billy The Kid's Old Timey Oddities</a> (2005)
+<li><a href="Darkhorse388.jpg">Bird: The Tattoo</a> (2001)
 <li><a href="../BlackBeetle/BlackBeetle.html">Black Beetle</a> (2013)
 <li><a href="Darkhorse54.jpg">Black Cross: Dirty Work</a> (1997)
 <li><a href="../BlackHammer/BlackHammer.html">Black Hammer</a> (2016)
@@ -612,15 +635,31 @@ That same year, Frank Miller (Batman: The Dark Knight Returns) and Dave Gibbons 
 <li><a href="../BlackburneCovenant/BlackburneCovenant.html">Blackburne Covenant</a> (2003)
 <li><a href="Darkhorse55.jpg">Blackout</a> (2014)
 <li><a href="Darkhorse56.jpg">Blade Of The Immortal</a> (2007)
+<li><a href="Darkhorse389.jpg">Blessed Thistle</a> (2007)
+<li><a href="Darkhorse390.jpg">Blood Brothers</a> (2013)
 <li><a href="Darkhorse57.jpg">Blue Lily</a> (1993)
+<li><a href="Darkhorse391.jpg">Blue Witch Of Oz</a> (1992)
 <li><a href="Darkhorse58.jpg">BMWFilms.com's The Hire</a> (2005)
 <li><a href="Darkhorse59.jpg">Bob Burden's Original Mysterymen Presents</a> (1999)
+<li><a href="Darkhorse392.jpg">Bob Powell's Complete Cave Girl</a> (2014)
+<li><a href="Darkhorse393.jpg">Bob Powell's Complete Jet Powers</a> (2015)
+<li><a href="Darkhorse394.jpg">Boba Fett: Salvage</a> (1997)
 <li><a href="Darkhorse60.jpg">Body Bags</a> (1996)
+<li><a href="Darkhorse395.jpg">Book Of Grickle</a> (1997)
 <li><a href="Darkhorse61.jpg">Book Of Night</a> (1987)
+<li><a href="Darkhorse396.jpg">Borgias</a> (2014)
+<li><a href="Darkhorse397.jpg">Boris Karloff Tales Of Mystery Archive</a> (2009)
 <li><a href="../BorisTheBear/BorisTheBear.html">Boris The Bear</a> (1987)
+<li><a href="Darkhorse398.jpg">Bounty</a> (2016)
 <li><a href="Darkhorse62.jpg">Brain Boy</a> (2013)
 <li><a href="Darkhorse63.jpg">Brain Boy: The Men from G.E.S.T.A.L.T.</a> (2014)
+<li><a href="Darkhorse399.jpg">Breath Of Bones: A Tale Of The Golm</a> (2013)
+<li><a href="Darkhorse400.jpg">Briggs Land</a> (2016)
+<li><a href="Darkhorse401.jpg">Brothers Of The Spear Archives</a> (2012)
 <li><a href="../BuffyTheVampireSlayer/BuffyTheVampireSlayer.html">Buffy The Vampire Slayer</a> (2002)
+<li><a href="Darkhorse402.jpg">Buzzard</a> (2010)
+<li><a href="Darkhorse403.jpg">Buzzkill</a> (2013)
+<li><a href="Darkhorse404.jpg">By Bizarre Hands</a> (1994)
 <li><a href="../CallOfDuty/CallOfDuty.html">Call Of Duty</a> (2016)
 <li><a href="Darkhorse64.jpg">Captain Midnight</a> (2013)
 <li><a href="../CatalystComix/CatalystComix.html">Catalyst Comix</a> (2014)
@@ -628,6 +667,7 @@ That same year, Frank Miller (Batman: The Dark Knight Returns) and Dave Gibbons 
 <li><a href="../ChevalNoir/ChevalNoir.html">Cheval Noir</a> (1994)
 <li><a href="Darkhorse65.jpg">Chickenhare: Fire in The Hole</a> (2008)
 <li><a href="Darkhorse66.jpg">Chickenhare: The House Of Klaus</a> (2006)
+<li><a href="Darkhorse405.jpg">Chimichanga</a> (2011)
 <li><a href="Darkhorse67.jpg">Chosen</a> (2004)
 <li><a href="Darkhorse68.jpg">Chronowar</a> (1997)
 <li><a href="Darkhorse69.jpg">City Of Others</a> (2007)
