--- a/index.html
+++ b/index.html
@@ -13962,6 +13962,13 @@
 </tr>
 
 <tr>
+<td>Book Of Grickle</td>
+<td>2010</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Book Of Lost Souls</td>
 <td>2005</td>
 <td>Icon</td>
